--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
   },
   "homepage": "https://github.com/formio/premium#readme",
   "peerDependencies": {
-    "formiojs": "^4.9.20"
+    "formiojs": "^4.14.6"
   },
   "devDependencies": {
+    "formiojs": "^4.14.6",
     "@types/chai": "^4.2.11",
     "@types/ejs": "^3.0.2",
     "@types/mocha": "^7.0.2",
